# AutoFree

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/scripts/: recover_lost_accounts.py
backend/src/autofree/: __init__.py  cli.py  deps.py  main.py  settings.py
backend/src/autofree/api/: accounts.py  domains.py  freegen.py  screenshots.py  settings.py  sse.py
backend/src/autofree/auth/: bootstrap.py  routes.py  service.py
backend/src/autofree/core/: __init__.py  batch.py  browser.py  config.py  control.py  cpa_oauth_bind.py  cpa_push.py  cpa_sync.py  errors.py  identity.py  mail.py  oauth.py  phone_country.py  register.py  register_phone.py  sms.py  sms_types.py  storage.py
backend/src/autofree/core/sms_providers/: __init__.py  base.py  fivesim.py  herosms.py
backend/src/autofree/db/: __init__.py  base.py  models.py
backend/src/autofree/db/alembic/: env.py
backend/src/autofree/db/alembic/versions/: 6a4f835d9941_init_schema.py  a1b2c3d4e5f6_add_phone_verified.py  b2c3d4e5f6a7_add_phone_e164_email_bound.py  c3d4e5f6a7b8_add_pending_phone_e164.py
docker/: Dockerfile  entrypoint.sh
docs/: design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: Layout.tsx  ScreenshotsModal.tsx  Sidebar.tsx  ui.tsx
frontend/src/pages/: AccountsPage.tsx  BatchPage.tsx  CpaPage.tsx  DashboardPage.tsx  LoginPage.tsx  PendingPage.tsx  (+1 more)
(+3 files in other folders)
