[project]
name = "autofree"
version = "0.1.0"
description = "批量自动注册 OpenAI free 账号 — 独立 web 应用"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.20",
    "playwright>=1.49.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    # DB drivers (按需启用)
    # "psycopg[binary]>=3.2.0",
    # "pymysql>=1.1.0",
]

[project.scripts]
autofree = "autofree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autofree"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F401", "F811", "F821", "E", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/autofree/db/alembic/**" = ["E", "W", "F"]
